--- a/jonnie-pacheco-login-ui-project/login-styles.css
+++ b/jonnie-pacheco-login-ui-project/login-styles.css
@@ -3,31 +3,45 @@
     padding: 0;
     box-sizing:border-box
 }
+h2{ 
+    color: #80eb39;
+    font-style: italic;
+    
+}
+
+
 body{
-    background-color: #512155;
+    background-color: #032b64;
 }
 /* Container */
 .container{
     display: flex;
+        justify-content: center;
     height: 500px;
     width: 800px;
-    /*border: 1px solid black; */
+    /*border: 1px solid black;*/
+
     margin: auto;
     margin-top: 50px;
-    box-shadow: none;
+    box-shadow: 10px 20px #80eb39;
+    border-radius: 4%;
+    
 }
 /* Login Form*/
 .form{
     display: flex;
+    
     flex-direction: column;
-    width: 50%;
+    width: 100%;
     align-items: center;
-    background-color: rgb(141, 188, 232);
+    background-color: rgb(11, 127, 244);
+    border-radius: 2%;
 }
 .form h2{
     font-size: 3rem;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin: 40px;
+    
 
 }
 .box{
@@ -40,28 +54,29 @@ body{
 }
 #submit{
     padding: 12px 30px;
-    width: 45%;
+    
     margin-top: 40px;
     background-color: black;
     color: white;
     font-weight: bold;
-    border: none;
+    border: 1px solid black;
     outline: none;
     border-radius: 20px;
 
 }
 #submit:hover{
     cursor: pointer;
-    background-color: #750000;
+    background-color: #80eb39;
 
 }
 .form{
     text-decoration: none;
     color: black;
     margin-top: 20px;
+    
 }
 .form a:hover{
-    color: #fd4e4e;
+    color: #80eb39;
 }
 /*Right Side*/
 .side{
